# docs/swagger.json
@@ -15,7 +15,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Save all nodes, connections and event cards",
+                "summary": "saves new Nodes, Connections and EventCards",
                 "operationId": "BatchSave",
                 "parameters": [
                     {
@@ -44,7 +44,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Save all nodes, connections and event cards",
+                "summary": "deletes all Nodes, Connections and EventCards from the graph",
                 "operationId": "BatchDelete",
                 "parameters": [
                     {
@@ -75,7 +75,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Execute callback",
+                "summary": "executes callback",
                 "operationId": "Call",
                 "parameters": [
                     {
@@ -106,7 +106,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Save all nodes, connections and event cards",
+                "summary": "saves or updates Connection",
                 "operationId": "SaveConnection",
                 "parameters": [
                     {
@@ -135,7 +135,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Save all nodes, connections and event cards",
+                "summary": "deletes Connection",
                 "operationId": "DeleteConnection",
                 "parameters": [
                     {
@@ -166,7 +166,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Save all nodes, connections and event cards",
+                "summary": "saves or updates EventCard",
                 "operationId": "SaveEventCard",
                 "parameters": [
                     {
@@ -195,7 +195,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Save all nodes, connections and event cards",
+                "summary": "deletes EventCard",
                 "operationId": "DeleteEventCard",
                 "parameters": [
                     {
@@ -226,7 +226,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Save all nodes, connections and event cards",
+                "summary": "finds graphs that would activate for event",
                 "operationId": "FindActive",
                 "parameters": [
                     {
@@ -257,17 +257,22 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Get graph with nodes, connections and event cards",
+                "summary": "gets graph with Nodes, Connections and EventCards",
                 "operationId": "GetGraph",
                 "parameters": [
                     {
-                        "description": "request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/storage.GetGraphRequest"
-                        }
+                        "type": "integer",
+                        "description": "project id",
+                        "name": "projectId",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "graph id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -286,7 +291,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Save all nodes, connections and event cards",
+                "summary": "saves or updates graph. Nodes, Connections and EventCards are ignored",
                 "operationId": "SaveGraph",
                 "parameters": [
                     {
@@ -315,7 +320,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Save all nodes, connections and event cards",
+                "summary": "deletes graph and all related Nodes, Connections and EventCards",
                 "operationId": "DeleteGraph",
                 "parameters": [
                     {
@@ -346,7 +351,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "List graphs",
+                "summary": "lists graphs",
                 "operationId": "ListGraph",
                 "parameters": [
                     {
@@ -370,6 +375,86 @@
                 }
             }
         },
+        "/list-module": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "lists modules",
+                "operationId": "ListModule",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/module.ListResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/module": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "saves Module",
+                "operationId": "SaveModule",
+                "parameters": [
+                    {
+                        "description": "request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/module.DBModule"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/module.DBModule"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "deletes Module",
+                "operationId": "DeleteModule",
+                "parameters": [
+                    {
+                        "description": "request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/module.DeleteRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/module.DeleteResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/node": {
             "post": {
                 "consumes": [
@@ -378,7 +463,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Save all nodes, connections and event cards",
+                "summary": "saves or updates node",
                 "operationId": "SaveNode",
                 "parameters": [
                     {
@@ -407,7 +492,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Save all nodes, connections and event cards",
+                "summary": "deletes Node",
                 "operationId": "DeleteNode",
                 "parameters": [
                     {
@@ -772,6 +857,42 @@
                 }
             }
         },
+        "module.DBModule": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "module": {
+                    "type": "string"
+                },
+                "uri": {
+                    "type": "string"
+                }
+            }
+        },
+        "module.DeleteRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "module.DeleteResponse": {
+            "type": "object"
+        },
+        "module.ListResponse": {
+            "type": "object",
+            "properties": {
+                "modules": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/module.DBModule"
+                    }
+                }
+            }
+        },
         "search.ActiveGraph": {
             "type": "object",
             "properties": {
@@ -848,17 +969,6 @@
         },
         "storage.DeleteResponse": {
             "type": "object"
-        },
-        "storage.GetGraphRequest": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "projectId": {
-                    "type": "integer"
-                }
-            }
         },
         "storage.GetGraphResponse": {
             "type": "object",
